added integration tests for the REST endpoints in PlanResource using RestAssured and improved the PlanFileService