@@ -1,13 +1,12 @@
 package net.tfassbender.gameplan.persistence.file;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import jakarta.annotation.PostConstruct;
 import jakarta.enterprise.context.ApplicationScoped;
-import jakarta.inject.Inject;
 import net.tfassbender.gameplan.dto.PlanDto;
 import net.tfassbender.gameplan.persistence.PlanService;
 import net.tfassbender.gameplan.persistence.exception.GamePlanPersistenceException;
 import net.tfassbender.gameplan.persistence.exception.GamePlanResourceNotFoundException;
+import org.apache.commons.lang3.tuple.Pair;
 import org.eclipse.microprofile.config.inject.ConfigProperty;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -18,10 +17,8 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.text.SimpleDateFormat;
 import java.util.Date;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Objects;
 import java.util.stream.Stream;
 
 @ApplicationScoped
@@ -32,45 +29,155 @@ public class PlanFileService implements PlanService {
   @ConfigProperty(name = "game_plan.path")
   private String gamePlanPath;
 
-  @Inject
-  private UserFileService userService;
+  public List<String> getPlanNames(String username) throws GamePlanPersistenceException {
+    if (username == null) {
+      throw new GamePlanResourceNotFoundException("Username cannot be null.");
+    }
 
-  private final Map<String, Map<String, Path>> usersToPlansToFiles = new HashMap<>();
+    return getAllPlansForUser(username).map(dto -> dto.name).toList();
+  }
 
-  @PostConstruct
-  protected void loadGamePlanFileMappings() {
-    Path usersDir = Paths.get(gamePlanPath, UserFileService.USERS_SUB_DIR);
-    if (Files.exists(usersDir) && Files.isDirectory(usersDir)) {
-      try (Stream<Path> userDirs = Files.list(usersDir)) {
-        userDirs.filter(Files::isDirectory) //
-                .filter(file -> !file.getFileName().toString().equals(UserFileService.USERS_SUB_DIR)) // filter out the ".users" system directory
-                .forEach(userDir -> {
-                  String username = userDir.getFileName().toString();
-                  try {
-                    List<String> planFiles = getPlanFiles(userDir);
-                    for (String planFile : planFiles) {
-                      Path planFilePath = userDir.resolve(planFile);
-                      PlanDto planDto = loadPlanFile(username, planFile);
-                      usersToPlansToFiles.computeIfAbsent(username, k -> new HashMap<>()).put(planDto.name, planFilePath);
-                    }
-                  }
-                  catch (GamePlanPersistenceException e) {
-                    log.error("Failed to load plans for user '{}': {}", username, e.getMessage(), e);
-                  }
-                });
-      }
-      catch (IOException e) {
-        log.error("Failed to list user directories in game plan path: {}", gamePlanPath, e);
-      }
+  public PlanDto getPlan(String username, String planName) throws GamePlanPersistenceException {
+    if (username == null || planName == null) {
+      throw new GamePlanResourceNotFoundException("Username or plan name cannot be null.");
+    }
+
+    return getAllPlansForUser(username).filter(dto -> planName.equals(dto.name)) //
+            .findFirst() //
+            .orElseThrow(() -> new GamePlanResourceNotFoundException("Plan '" + planName + "' does not exist for user '" + username + "'."));
+  }
+
+  public PlanDto createPlan(String username, String gameName) throws GamePlanPersistenceException {
+    Path planFilePath = createPlanFile(username, gameName);
+
+    PlanDto newPlan = new PlanDto();
+    newPlan.name = getUniquePlanName(username, gameName);
+    newPlan.gameName = gameName;
+    newPlan.lastModified = getCurrentTimestampAsString();
+
+    ObjectMapper mapper = new ObjectMapper();
+    try {
+      String content = mapper.writeValueAsString(newPlan);
+      log.info("Creating new plan file '{}' for user '{}'", planFilePath.getFileName(), username);
+      Files.writeString(planFilePath, content);
+    }
+    catch (IOException e) {
+      throw new GamePlanPersistenceException("Failed to create plan file: " + gameName, e);
+    }
+
+    return newPlan;
+  }
+
+  private Path createPlanFile(String username, String gameName) throws GamePlanResourceNotFoundException {
+    return getUserDirPath(username).resolve(gameName + "_" + getCurrentTimestampForFileName() + ".json");
+  }
+
+  private String getUniquePlanName(String username, String gameName) throws GamePlanPersistenceException {
+    List<String> existingPlanNames = getAllPlansForUser(username).map(dto -> dto.name).toList();
+    if (existingPlanNames.isEmpty()) {
+      return gameName;
+    }
+
+    String candidate = gameName;
+    int counter = 1;
+    while (existingPlanNames.contains(candidate)) {
+      candidate = gameName + "_" + counter;
+      counter++;
+    }
+    return candidate;
+  }
+
+  public PlanDto savePlan(String username, PlanDto plan) throws GamePlanPersistenceException {
+    Path planFilePath = findPlanDtoAndPathByName(username, plan.name).getRight();
+    ObjectMapper mapper = new ObjectMapper();
+    try {
+      plan.lastModified = getCurrentTimestampAsString();
+      String content = mapper.writeValueAsString(plan);
+      log.debug("Saving plan '{}' for user '{}' - filename '{}'", plan.name, username, planFilePath.getFileName().toString());
+      Files.writeString(planFilePath, content);
+    }
+    catch (IOException e) {
+      throw new GamePlanPersistenceException("Failed to save plan file: " + plan.name, e);
+    }
+
+    return plan;
+  }
+
+  public void deletePlan(String username, String planName) throws GamePlanPersistenceException {
+    if (username == null || planName == null) {
+      throw new GamePlanResourceNotFoundException("Username or plan name cannot be null.");
+    }
+
+    Pair<PlanDto, Path> plan = findPlanDtoAndPathByName(username, planName);
+
+    try {
+      log.info("Deleting plan '{}' for user '{}' - filename '{}'", planName, username, plan.getRight().getFileName().toString());
+      Files.delete(plan.getRight());
+    }
+    catch (IOException e) {
+      throw new GamePlanPersistenceException("Failed to delete plan file: " + planName, e);
     }
   }
 
-  private List<String> getPlanFiles(Path userDir) throws GamePlanPersistenceException {
+  private Pair<PlanDto, Path> findPlanDtoAndPathByName(String username, String planName) throws GamePlanPersistenceException {
+    Path userDir = Paths.get(gamePlanPath, UserFileService.USERS_SUB_DIR, username);
+    if (!Files.exists(userDir) || !Files.isDirectory(userDir)) {
+      throw new GamePlanResourceNotFoundException("User directory does not exist for user '" + username + "'.");
+    }
+
     try (Stream<Path> files = Files.list(userDir)) {
       return files.filter(Files::isRegularFile) //
               .filter(path -> path.toString().endsWith(".json")) //
+              .map(path -> {
+                String fileName = path.getFileName().toString();
+                log.info("Checking plan file '{}' for user '{}'", fileName, username);
+                try {
+                  PlanDto planDto = loadPlanFile(username, fileName);
+                  return Pair.of(planDto, path);
+                }
+                catch (GamePlanPersistenceException e) {
+                  log.error("Failed to load plan file '{}' for user '{}': {}", fileName, username, e.getMessage(), e);
+                  return null;
+                }
+              }) //
+              .filter(Objects::nonNull) //
+              .filter(pair -> planName.equals(pair.getLeft().name)) //
+              .findFirst() //
+              .orElseThrow(() -> new GamePlanResourceNotFoundException("Plan '" + planName + "' does not exist for user '" + username + "'."));
+    }
+    catch (IOException e) {
+      throw new GamePlanPersistenceException("Failed to list plan files for user '" + userDir.getFileName().toString() + "'.", e);
+    }
+  }
+
+  private Stream<PlanDto> getAllPlansForUser(String username) throws GamePlanPersistenceException {
+    Path usersDir = Paths.get(gamePlanPath, UserFileService.USERS_SUB_DIR, username);
+    if (!Files.exists(usersDir) || !Files.isDirectory(usersDir)) {
+      throw new GamePlanResourceNotFoundException("User directory does not exist for user '" + username + "'.");
+    }
+
+    return getPlanFileNames(usersDir) //
+            .map(planFile -> {
+              try {
+                return loadPlanFile(username, planFile);
+              }
+              catch (GamePlanPersistenceException e) {
+                log.error("Failed to load plan file '{}' for user '{}': {}", planFile, username, e.getMessage(), e);
+                return null;
+              }
+            }) //
+            .filter(Objects::nonNull);
+  }
+
+  private Stream<String> getPlanFileNames(Path userDir) throws GamePlanPersistenceException {
+    try (Stream<Path> files = Files.list(userDir)) {
+      List<String> fileNames = files.filter(Files::isRegularFile) //
+              .filter(path -> path.toString().endsWith(".json")) //
               .map(path -> path.getFileName().toString()) //
-              .collect(Collectors.toList());
+              .toList();
+
+      // return a new stream, since the files stream is auto-closed by the try-with-resources block
+      return fileNames.stream();
     }
     catch (IOException e) {
       throw new GamePlanPersistenceException("Failed to list plan files for user '" + userDir.getFileName().toString() + "'.", e);
@@ -93,109 +200,6 @@ public class PlanFileService implements PlanService {
     }
   }
 
-  public List<String> getPlanNames(String username) throws GamePlanPersistenceException {
-    Map<String, Path> plansToFiles = usersToPlansToFiles.get(username);
-    if (plansToFiles == null) {
-      return List.of();
-    }
-
-    return plansToFiles.keySet().stream().toList();
-  }
-
-  public PlanDto getPlan(String username, String planName) throws GamePlanPersistenceException {
-    Map<String, Path> plansToFiles = usersToPlansToFiles.get(username);
-    if (plansToFiles == null || !plansToFiles.containsKey(planName)) {
-      throw new GamePlanResourceNotFoundException("Plan '" + planName + "' does not exist for user '" + username + "'.");
-    }
-
-    Path planFilePath = plansToFiles.get(planName);
-    try {
-      String content = Files.readString(planFilePath);
-      ObjectMapper mapper = new ObjectMapper();
-      return mapper.readValue(content, PlanDto.class);
-    }
-    catch (IOException e) {
-      throw new GamePlanPersistenceException("Failed to read plan file: " + planName, e);
-    }
-  }
-
-  public PlanDto createPlan(String username, String gameName) throws GamePlanPersistenceException {
-    Path planFilePath = createPlanFile(username, gameName);
-
-    PlanDto newPlan = new PlanDto();
-    newPlan.name = getUniquePlanName(username, gameName);
-    newPlan.filename = planFilePath.getFileName().toString();
-    newPlan.gameName = gameName;
-    newPlan.lastModified = getCurrentTimestampAsString();
-
-    ObjectMapper mapper = new ObjectMapper();
-    try {
-      String content = mapper.writeValueAsString(newPlan);
-      Files.writeString(planFilePath, content);
-
-      usersToPlansToFiles.get(username).put(newPlan.name, planFilePath);
-    }
-    catch (IOException e) {
-      throw new GamePlanPersistenceException("Failed to create plan file: " + gameName, e);
-    }
-
-    return newPlan;
-  }
-
-  private Path createPlanFile(String username, String gameName) throws GamePlanResourceNotFoundException {
-    return getUserDirPath(username).resolve(gameName + "_" + getCurrentTimestampForFileName() + ".json");
-  }
-
-  private String getUniquePlanName(String username, String gameName) {
-    Map<String, Path> plans = usersToPlansToFiles.get(username);
-    if (plans == null) {
-      return gameName;
-    }
-    String candidate = gameName;
-    int counter = 1;
-    while (plans.containsKey(candidate)) {
-      candidate = gameName + "_" + counter;
-      counter++;
-    }
-    return candidate;
-  }
-
-  public PlanDto savePlan(String username, PlanDto plan) throws GamePlanPersistenceException {
-    Path userDir = getUserDirPath(username);
-
-    Path planFilePath = userDir.resolve(plan.filename);
-    ObjectMapper mapper = new ObjectMapper();
-    try {
-      plan.lastModified = getCurrentTimestampAsString();
-      String content = mapper.writeValueAsString(plan);
-      Files.writeString(planFilePath, content);
-
-      // Update the in-memory mapping
-      usersToPlansToFiles.computeIfAbsent(username, k -> new HashMap<>()).put(plan.name, planFilePath);
-    }
-    catch (IOException e) {
-      throw new GamePlanPersistenceException("Failed to save plan file: " + plan.name, e);
-    }
-
-    return plan;
-  }
-
-  public void deletePlan(String username, String planName) throws GamePlanPersistenceException {
-    Map<String, Path> plansToFiles = usersToPlansToFiles.get(username);
-    if (plansToFiles == null || !plansToFiles.containsKey(planName)) {
-      throw new GamePlanResourceNotFoundException("Plan '" + planName + "' does not exist for user '" + username + "'.");
-    }
-
-    Path planFilePath = getUserDirPath(username).resolve(plansToFiles.get(planName).getFileName());
-
-    try {
-      Files.delete(planFilePath);
-    }
-    catch (IOException e) {
-      throw new GamePlanPersistenceException("Failed to delete plan file: " + planName, e);
-    }
-  }
-
   private Path getUserDirPath(String username) throws GamePlanResourceNotFoundException {
     Path userDir = Paths.get(gamePlanPath, UserFileService.USERS_SUB_DIR, username);
     if (!Files.exists(userDir)) {
@@ -212,4 +216,3 @@ public class PlanFileService implements PlanService {
     return new SimpleDateFormat("yyyyMMdd_HHmmss").format(new Date());
   }
 }
-
